--- a/infrend_project/src/app/app.component.html
+++ b/infrend_project/src/app/app.component.html
@@ -1,16 +1,19 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Bank</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand" href="#">Orvosi Rendelő</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="/">Felhasználók</a>
+          <a class="nav-link active" aria-current="page" routerLink="/" s>Betegek</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/add-user">Új felhasználó</a>
+          <a class="nav-link active" aria-current="page" routerLink="/add-patient" s>Új beteg</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink="/add-history" s>Új vizit</a>
         </li>
       </ul>
     </div>
