--- a/infrend_project/src/app/patient-list/patient-list.component.html
+++ b/infrend_project/src/app/patient-list/patient-list.component.html
@@ -3,12 +3,9 @@
         <table class="table table-striped">
             <thead>
                 <tr>
-                    <th>Ügyfélkód</th>
                     <th>Név</th>
-                    <th>Lakcím</th>
-                    <th>Telefonszám</th>
-                    <th>Személyi ig. szám</th>
-                    <th>Műveletek</th>
+                    <th>Születési Dátum</th>
+                    <th>Tajszám</th>
                 </tr>
             </thead>
             <tbody>
