--- a/infrend_project/src/app/patient-form/patient-form.component.html
+++ b/infrend_project/src/app/patient-form/patient-form.component.html
@@ -1,1 +1,21 @@
-<p>patient-form works!</p>
+<div class="row">
+    <div class="col-md-6">
+        <form [formGroup]="patientForm">
+            <div class="mb-3">
+                <label for="name" class="form-label">Név</label>
+                <input type="text" class="form-control" id="nev" formControlName="nev">
+            </div>
+            <div class="mb-3">
+                <label for="address" class="form-label">Születési Dátum</label>
+                <input type="text" class="form-control" id="szul_datum" formControlName="szul_datum">
+            </div>
+            <div class="mb-3">
+                <label for="phone" class="form-label">Tajszám</label>
+                <input type="text" class="form-control" id="taj" formControlName="taj">
+            </div>
+        </form>
+        <div class="text-end">
+            <button class="btn btn-outline-primary" (click)="savePatient()">Mentés</button>
+        </div>
+    </div>
+</div>
