--- a/infrend_project/src/app/app.component.html
+++ b/infrend_project/src/app/app.component.html
@@ -1,3 +1,5 @@
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Orvosi Rendelő</a>
