--- a/infrend_project/src/app/patient-list/patient-list.component.html
+++ b/infrend_project/src/app/patient-list/patient-list.component.html
@@ -16,7 +16,7 @@
                         <td>{{ patient.taj }}</td>
                         <td>
                             <button class="btn btn-outline-primary"
-                                (click)="loadTransactionsOfUser(patient.id)">Kimenő tranzakciók</button>
+                                (click)="loadTransactionsOfUser(patient.id)">Vizitek Listája</button>
                             <button class="btn btn-outline-primary"
                                 (click)="goToPatientForm(patient.id)">Módosítás</button>
                             <button class="btn btn-outline-danger"
