--- a/infrend_project/src/app/app.component.html
+++ b/infrend_project/src/app/app.component.html
@@ -13,6 +13,9 @@
             <a class="nav-link active" aria-current="page" routerLink="/" s>Betegek</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link active" aria-current="page" routerLink="/patient-history" s>Vizitek</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link active" aria-current="page" routerLink="/add-patient" s>Új beteg</a>
           </li>
           <li class="nav-item">
