--- a/infrend_project/src/app/patient-list/patient-list.component.html
+++ b/infrend_project/src/app/patient-list/patient-list.component.html
@@ -3,6 +3,7 @@
         <table class="table table-striped">
             <thead>
                 <tr>
+                    <th>ID</th>
                     <th>Név</th>
                     <th>Születési Dátum</th>
                     <th>Tajszám</th>
@@ -11,6 +12,7 @@
             <tbody>
                 @for(patient of patients; track $index) {
                     <tr>
+                        <td>{{ patient.id }}</td>
                         <td>{{ patient.nev }}</td>
                         <td>{{ patient.szul_datum }}</td>
                         <td>{{ patient.taj }}</td>
