--- a/infrend_project/src/app/history-list/history-list.component.html
+++ b/infrend_project/src/app/history-list/history-list.component.html
@@ -3,6 +3,7 @@
         <table class="table table-striped">
             <thead>
                 <tr>
+                    <th>Beteg neve</th>
                     <th>Diagnózis</th>
                     <th>Gyógyszerek</th>
                     <th>Leletek</th>
@@ -11,6 +12,7 @@
             <tbody>
                 @for(history of histories; track $index) {
                     <tr>
+                        <td>{{ history.beteg?.nev }}</td>
                         <td>{{ history.diagnozis }}</td>
                         <td>{{ history.gyogyszerek }}</td>
                         <td>{{ history.leletek }}</td>
