--- a/infrend_project/src/app/patient-form/patient-form.component.html
+++ b/infrend_project/src/app/patient-form/patient-form.component.html
@@ -13,6 +13,10 @@
                 <label for="taj" class="form-label">Tajszám</label>
                 <input type="text" class="form-control" id="taj" formControlName="taj">
             </div>
+            <div class="mb-3">
+                <label for="taj" class="form-label">Nem</label>
+                <input type="text" class="form-control" id="taj" formControlName="nem">
+            </div>
         </form>
         <div class="text-end">
             <button class="btn btn-outline-primary" (click)="savePatient()">Mentés</button>
