--- a/infrend_project/src/app/patient-list/patient-list.component.html
+++ b/infrend_project/src/app/patient-list/patient-list.component.html
@@ -3,8 +3,8 @@
         <table class="table table-striped">
             <thead>
                 <tr>
-                    <th>ID</th>
                     <th>Név</th>
+                    <th>Nem</th>
                     <th>Születési Dátum</th>
                     <th>Tajszám</th>
                 </tr>
@@ -12,18 +12,22 @@
             <tbody>
                 @for(patient of patients; track $index) {
                     <tr>
-                        <td>{{ patient.id }}</td>
                         <td>{{ patient.nev }}</td>
+                        <td>{{ patient.nem }}</td>
                         <td>{{ patient.szul_datum }}</td>
                         <td>{{ patient.taj }}</td>
                         <td>
-                            <button class="btn btn-outline-primary"
-                                (click)="getHistoryOfPatient(patient.id)">Vizitek Listája</button>
-                            <button class="btn btn-outline-primary"
-                                (click)="goToPatientForm(patient.id)">Módosítás</button>
                             <button class="btn btn-outline-danger"
                                 (click)="deletePatient(patient)">Törlés</button>
                         </td>
+                        <!-- 
+                            <td>
+                                <button class="btn btn-outline-primary"
+                                    (click)="getHistoryOfPatient(patient.id)">Vizitek Listája</button>
+                                <button class="btn btn-outline-primary"
+                                (click)="goToPatientForm(patient.id)">Módosítás</button>
+                            </td>
+                        -->
                     </tr>
                 }
             </tbody>
