--- a/infrend_project/src/app/patient-form/patient-form.component.html
+++ b/infrend_project/src/app/patient-form/patient-form.component.html
@@ -6,7 +6,7 @@
                 <input type="text" class="form-control" id="nev" formControlName="nev">
             </div>
             <div class="mb-3">
-                <label for="szul_datum" class="form-label">Születési Dátum</label>
+                <label for="szul_datum" class="form-label">Születés Éve</label>
                 <input type="text" class="form-control" id="szul_datum" formControlName="szul_datum">
             </div>
             <div class="mb-3">
