--- a/infrend_project/src/app/patient-list/patient-list.component.html
+++ b/infrend_project/src/app/patient-list/patient-list.component.html
@@ -14,7 +14,7 @@
                     <tr>
                         <td>{{ patient.nev }}</td>
                         <td>{{ patient.nem }}</td>
-                        <td>{{ patient.szul_datum }}</td>
+                        <td>{{ patient.szul_ev }}</td>
                         <td>{{ patient.taj }}</td>
                         <td>
                             <button class="btn btn-outline-danger"
