--- a/infrend_project/src/app/patient-form/patient-form.component.html
+++ b/infrend_project/src/app/patient-form/patient-form.component.html
@@ -7,7 +7,7 @@
             </div>
             <div class="mb-3">
                 <label for="szul_datum" class="form-label">Születés Éve</label>
-                <input type="text" class="form-control" id="szul_datum" formControlName="szul_datum">
+                <input type="text" class="form-control" id="szul_ev" formControlName="szul_ev">
             </div>
             <div class="mb-3">
                 <label for="taj" class="form-label">Tajszám</label>
