--- a/infrend_project/src/app/history-list/history-list.component.html
+++ b/infrend_project/src/app/history-list/history-list.component.html
@@ -13,7 +13,7 @@
             <tbody>
                 @for(history of histories; track $index) {
                     <tr>
-                        <td></td>
+                        <td>{{ history.beteg }}</td>
                         <td>{{ history.vizitEve }}</td>
                         <td>{{ history.diagnozis }}</td>
                         <td>{{ history.gyogyszerek }}</td>
