--- a/infrend_project/src/app/patient-list/patient-list.component.html
+++ b/infrend_project/src/app/patient-list/patient-list.component.html
@@ -5,7 +5,7 @@
                 <tr>
                     <th>Név</th>
                     <th>Nem</th>
-                    <th>Születési Dátum</th>
+                    <th>Születési Év</th>
                     <th>Tajszám</th>
                 </tr>
             </thead>
