--- a/infrend_project/src/app/patient-form/patient-form.component.html
+++ b/infrend_project/src/app/patient-form/patient-form.component.html
@@ -6,7 +6,7 @@
                 <input type="text" class="form-control" id="nev" formControlName="nev">
             </div>
             <div class="mb-3">
-                <label for="szul_datum" class="form-label">Születés Éve</label>
+                <label for="szul_ev" class="form-label">Születés Éve</label>
                 <input type="text" class="form-control" id="szul_ev" formControlName="szul_ev">
             </div>
             <div class="mb-3">
@@ -14,8 +14,8 @@
                 <input type="text" class="form-control" id="taj" formControlName="taj">
             </div>
             <div class="mb-3">
-                <label for="taj" class="form-label">Nem</label>
-                <input type="text" class="form-control" id="taj" formControlName="nem">
+                <label for="nem" class="form-label">Nem</label>
+                <input type="text" class="form-control" id="nem" formControlName="nem">
             </div>
         </form>
         <div class="text-end">
