--- a/infrend_project/src/app/patient-list/patient-list.component.html
+++ b/infrend_project/src/app/patient-list/patient-list.component.html
@@ -21,6 +21,8 @@
                                 (click)="goToPatientForm(patient.id)">Módosítás</button>
                             <button class="btn btn-outline-danger"
                                 (click)="deletePatient(patient)">Törlés</button>
+                            <button class="btn btn-outline-primary"
+                                (click)="getHistory(patient.id)">Vizitek Kiírása</button>
                         </td>
                         <!-- 
                             <td>
