--- a/infrend_project/src/app/history-form/history-form.component.html
+++ b/infrend_project/src/app/history-form/history-form.component.html
@@ -8,6 +8,7 @@
             <div class="mb-3">
                 <label for="beteg" class="form-label">Beteg</label>
                 <input type="text" class="form-control" id="beteg" formControlName="beteg">
+                <input type="text" class="form-control" id="beteg" formControlName="patientId">
             </div>
             <div class="mb-3">
                 <label for="diagnozis" class="form-label">Diagnózis</label>
