--- a/infrend_project/src/app/history-form/history-form.component.html
+++ b/infrend_project/src/app/history-form/history-form.component.html
@@ -6,9 +6,8 @@
                 <input type="text" class="form-control" id="vizitEve" formControlName="vizitEve">
             </div>
             <div class="mb-3">
-                <label for="beteg" class="form-label">Beteg</label>
-                <input type="text" class="form-control" id="beteg" formControlName="beteg">
-                <input type="text" class="form-control" id="beteg" formControlName="patientId">
+                <label for="patientId" class="form-label">Páciens ID</label>
+                <input type="text" class="form-control" id="patientId" formControlName="patientId">
             </div>
             <div class="mb-3">
                 <label for="diagnozis" class="form-label">Diagnózis</label>
