--- a/infrend_project/src/app/app.component.html
+++ b/infrend_project/src/app/app.component.html
@@ -21,6 +21,18 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" routerLink="/add-history" s>Új vizit</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" routerLink="/standard" s>Általános vizsgálat</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" routerLink="/prost" s>Prosztata vizsgálat</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" routerLink="/mammo" s>Mammográfiai vizsgálat</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" routerLink="/lung" s>Tüdőszűrő vizsgálat</a>
+          </li>
         </ul>
       </div>
     </div>
