--- a/infrend_project/src/app/mammo-checkup/mammo-checkup.component.html
+++ b/infrend_project/src/app/mammo-checkup/mammo-checkup.component.html
@@ -2,22 +2,22 @@
     <div class="col-md-12">
         <table class="table table-striped">
             <thead>
-                <h1>Általános vizsgálat</h1>
+                <h1>Mammográfiai vizsgálat</h1>
                 <tr>
                     <th>Név</th>
+                    <th>Kor</th>
                     <th>Legutolsó Vizsgálata</th>
                 </tr>
             </thead>
             <tbody>
                 @for(patient of patients; track $index) {
-                    @if(patient.szul_ev - maxMap[patient.id] > 5 && patient.szul_ev - maxMap[patient.id] != patient.szul_ev) {
+                    @if(patient.szul_ev - maxMap[patient.id] > 3 && maxMap[patient.id] != 0 && 2024 - patient.szul_ev >= 45 && patient.nem == "N") {
                         <tr>{{patient.nev}}</tr>
                         <tr>{{2024 - patient.szul_ev}}</tr>
-                        <tr> {{maxMap[patient.id]}} </tr>
+                        <tr>{{maxMap[patient.id]}}</tr>
                     }
                 }
             </tbody>
         </table>
     </div>
 </div>
-
