--- a/infrend_project/src/app/standard-checkup/standard-checkup.component.html
+++ b/infrend_project/src/app/standard-checkup/standard-checkup.component.html
@@ -5,6 +5,7 @@
                 <h1>Általános vizsgálat</h1>
                 <tr>
                     <th>Név</th>
+                    <th>Kor</th>
                     <th>Legutolsó Vizsgálata</th>
                 </tr>
             </thead>
