--- a/infrend_project/src/app/prost-checkup/prost-checkup.component.html
+++ b/infrend_project/src/app/prost-checkup/prost-checkup.component.html
@@ -6,6 +6,7 @@
                 <tr>
                     <th>Név</th>
                     <th>Kor</th>
+                    <th>Trying</th>
                 </tr>
             </thead>
             <tbody>
@@ -14,6 +15,7 @@
                         <tr>
                             <th>{{patient.nev}}</th>
                             <th>{{2024 - patient.szul_ev}}</th>
+                            <th>{{max[patient.id]}}</th>
                         </tr>
                     }
                 }
